phase3/phase3.output
Nonterminals useless in grammar

   vars


Terminals unused in grammar

   MAIN


Rules useless in grammar

   64 vars: var
   65     | var COMMA vars


State 0 conflicts: 1 shift/reduce
State 3 conflicts: 1 shift/reduce, 1 reduce/reduce
State 4 conflicts: 1 shift/reduce


Grammar

    0 $accept: prog_start $end

    1 prog_start: functions
    2           | functions prog_start

    3 functions: %empty
    4          | function functions

    5 $@1: %empty

    6 $@2: %empty

    7 $@3: %empty

    8 function: FUNCTION ident SEMICOLON $@1 BEGIN_PARAMS declarations END_PARAMS $@2 BEGIN_LOCALS declarations END_LOCALS $@3 BEGIN_BODY statements END_BODY

    9 ident: IDENT

   10 declarations: %empty
   11             | declaration SEMICOLON declarations

   12 declaration: identifiers COLON INTEGER
   13            | identifiers COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

   14 identifiers: ident
   15            | ident COMMA identifiers

   16 statement: ident L_SQUARE_BRACKET expression R_SQUARE_BRACKET ASSIGN expression
   17          | ident ASSIGN expression
   18          | IF bool_exp THEN statements ENDIF
   19          | IF bool_exp THEN statements ELSE statements ENDIF
   20          | WHILE bool_exp BEGINLOOP statements ENDLOOP
   21          | DO BEGINLOOP statements ENDLOOP WHILE bool_exp
   22          | READ ident
   23          | WRITE ident
   24          | CONTINUE
   25          | RETURN expression

   26 statements: statement SEMICOLON
   27           | statement SEMICOLON statements

   28 expression: multiplicative_expression
   29           | multiplicative_expression ADD expression
   30           | multiplicative_expression SUB expression

   31 multiplicative_expression: term
   32                          | term MULT multiplicative_expression
   33                          | term DIV multiplicative_expression
   34                          | term MOD multiplicative_expression

   35 term: var
   36     | NUMBER
   37     | L_PAREN expression R_PAREN

   38 $@4: %empty

   39 term: ident $@4 L_PAREN expressions R_PAREN

   40 expressions: %empty
   41            | comma_sep_expressions

   42 comma_sep_expressions: expression
   43                      | expression COMMA comma_sep_expressions

   44 bool_exp: relation_and_exp
   45         | relation_and_exp OR bool_exp

   46 relation_and_exp: relation_exp
   47                 | relation_exp AND relation_and_exp

   48 relation_exp: expression comp expression
   49             | NOT expression comp expression
   50             | TRUE
   51             | NOT TRUE
   52             | FALSE
   53             | NOT FALSE
   54             | L_PAREN bool_exp R_PAREN
   55             | NOT L_PAREN bool_exp R_PAREN

   56 comp: EQ
   57     | NEQ
   58     | LT
   59     | GT
   60     | LTE
   61     | GTE

   62 var: ident
   63    | ident L_SQUARE_BRACKET expression R_SQUARE_BRACKET


Terminals, with rules where they appear

$end (0) 0
error (256)
BEGIN_PARAMS (258) 8
END_PARAMS (259) 8
BEGIN_LOCALS (260) 8
END_LOCALS (261) 8
BEGIN_BODY (262) 8
END_BODY (263) 8
FUNCTION (264) 8
RETURN (265) 25
MAIN (266)
L_SQUARE_BRACKET (267) 13 16 63
R_SQUARE_BRACKET (268) 13 16 63
INTEGER (269) 12 13
ARRAY (270) 13
OF (271) 13
IF (272) 18 19
THEN (273) 18 19
ENDIF (274) 18 19
ELSE (275) 19
WHILE (276) 20 21
DO (277) 21
BEGINLOOP (278) 20 21
ENDLOOP (279) 20 21
CONTINUE (280) 24
READ (281) 22
WRITE (282) 23
TRUE (283) 50 51
FALSE (284) 52 53
AND (285) 47
OR (286) 45
NOT (287) 49 51 53 55
ASSIGN (288) 16 17
SUB (289) 30
ADD (290) 29
MULT (291) 32
DIV (292) 33
MOD (293) 34
EQ (294) 56
NEQ (295) 57
LT (296) 58
GT (297) 59
LTE (298) 60
GTE (299) 61
SEMICOLON (300) 8 11 26 27
COLON (301) 12 13
COMMA (302) 15 43
L_PAREN (303) 37 39 54 55
R_PAREN (304) 37 39 54 55
NUMBER (305) 13 36
IDENT (306) 9


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
prog_start (53)
    on left: 1 2, on right: 0 2
functions (54)
    on left: 3 4, on right: 1 2 4
function (55)
    on left: 8, on right: 4
$@1 (56)
    on left: 5, on right: 8
$@2 (57)
    on left: 6, on right: 8
$@3 (58)
    on left: 7, on right: 8
ident (59)
    on left: 9, on right: 8 14 15 16 17 22 23 39 62 63
declarations (60)
    on left: 10 11, on right: 8 11
declaration (61)
    on left: 12 13, on right: 11
identifiers (62)
    on left: 14 15, on right: 12 13 15
statement (63)
    on left: 16 17 18 19 20 21 22 23 24 25, on right: 26 27
statements (64)
    on left: 26 27, on right: 8 18 19 20 21 27
expression (65)
    on left: 28 29 30, on right: 16 17 25 29 30 37 42 43 48 49 63
multiplicative_expression (66)
    on left: 31 32 33 34, on right: 28 29 30 32 33 34
term (67)
    on left: 35 36 37 39, on right: 31 32 33 34
$@4 (68)
    on left: 38, on right: 39
expressions (69)
    on left: 40 41, on right: 39
comma_sep_expressions (70)
    on left: 42 43, on right: 41 43
bool_exp (71)
    on left: 44 45, on right: 18 19 20 21 45 54 55
relation_and_exp (72)
    on left: 46 47, on right: 44 45 47
relation_exp (73)
    on left: 48 49 50 51 52 53 54 55, on right: 46 47
comp (74)
    on left: 56 57 58 59 60 61, on right: 48 49
var (75)
    on left: 62 63, on right: 35


State 0

    0 $accept: . prog_start $end

    FUNCTION  shift, and go to state 1

    FUNCTION  [reduce using rule 3 (functions)]
    $default  reduce using rule 3 (functions)

    prog_start  go to state 2
    functions   go to state 3
    function    go to state 4


State 1

    8 function: FUNCTION . ident SEMICOLON $@1 BEGIN_PARAMS declarations END_PARAMS $@2 BEGIN_LOCALS declarations END_LOCALS $@3 BEGIN_BODY statements END_BODY

    IDENT  shift, and go to state 5

    ident  go to state 6


State 2

    0 $accept: prog_start . $end

    $end  shift, and go to state 7


State 3

    1 prog_start: functions .
    2           | functions . prog_start

    FUNCTION  shift, and go to state 1

    $end      reduce using rule 1 (prog_start)
    $end      [reduce using rule 3 (functions)]
    FUNCTION  [reduce using rule 3 (functions)]
    $default  reduce using rule 1 (prog_start)

    prog_start  go to state 8
    functions   go to state 3
    function    go to state 4


State 4

    4 functions: function . functions

    FUNCTION  shift, and go to state 1

    FUNCTION  [reduce using rule 3 (functions)]
    $default  reduce using rule 3 (functions)

    functions  go to state 9
    function   go to state 4


State 5

    9 ident: IDENT .

    $default  reduce using rule 9 (ident)


State 6

    8 function: FUNCTION ident . SEMICOLON $@1 BEGIN_PARAMS declarations END_PARAMS $@2 BEGIN_LOCALS declarations END_LOCALS $@3 BEGIN_BODY statements END_BODY

    SEMICOLON  shift, and go to state 10


State 7

    0 $accept: prog_start $end .

    $default  accept


State 8

    2 prog_start: functions prog_start .

    $default  reduce using rule 2 (prog_start)


State 9

    4 functions: function functions .

    $default  reduce using rule 4 (functions)


State 10

    8 function: FUNCTION ident SEMICOLON . $@1 BEGIN_PARAMS declarations END_PARAMS $@2 BEGIN_LOCALS declarations END_LOCALS $@3 BEGIN_BODY statements END_BODY

    $default  reduce using rule 5 ($@1)

    $@1  go to state 11


State 11

    8 function: FUNCTION ident SEMICOLON $@1 . BEGIN_PARAMS declarations END_PARAMS $@2 BEGIN_LOCALS declarations END_LOCALS $@3 BEGIN_BODY statements END_BODY

    BEGIN_PARAMS  shift, and go to state 12


State 12

    8 function: FUNCTION ident SEMICOLON $@1 BEGIN_PARAMS . declarations END_PARAMS $@2 BEGIN_LOCALS declarations END_LOCALS $@3 BEGIN_BODY statements END_BODY

    IDENT  shift, and go to state 5

    $default  reduce using rule 10 (declarations)

    ident         go to state 13
    declarations  go to state 14
    declaration   go to state 15
    identifiers   go to state 16


State 13

   14 identifiers: ident .
   15            | ident . COMMA identifiers

    COMMA  shift, and go to state 17

    $default  reduce using rule 14 (identifiers)


State 14

    8 function: FUNCTION ident SEMICOLON $@1 BEGIN_PARAMS declarations . END_PARAMS $@2 BEGIN_LOCALS declarations END_LOCALS $@3 BEGIN_BODY statements END_BODY

    END_PARAMS  shift, and go to state 18


State 15

   11 declarations: declaration . SEMICOLON declarations

    SEMICOLON  shift, and go to state 19


State 16

   12 declaration: identifiers . COLON INTEGER
   13            | identifiers . COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    COLON  shift, and go to state 20


State 17

   15 identifiers: ident COMMA . identifiers

    IDENT  shift, and go to state 5

    ident        go to state 13
    identifiers  go to state 21


State 18

    8 function: FUNCTION ident SEMICOLON $@1 BEGIN_PARAMS declarations END_PARAMS . $@2 BEGIN_LOCALS declarations END_LOCALS $@3 BEGIN_BODY statements END_BODY

    $default  reduce using rule 6 ($@2)

    $@2  go to state 22


State 19

   11 declarations: declaration SEMICOLON . declarations

    IDENT  shift, and go to state 5

    $default  reduce using rule 10 (declarations)

    ident         go to state 13
    declarations  go to state 23
    declaration   go to state 15
    identifiers   go to state 16


State 20

   12 declaration: identifiers COLON . INTEGER
   13            | identifiers COLON . ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    INTEGER  shift, and go to state 24
    ARRAY    shift, and go to state 25


State 21

   15 identifiers: ident COMMA identifiers .

    $default  reduce using rule 15 (identifiers)


State 22

    8 function: FUNCTION ident SEMICOLON $@1 BEGIN_PARAMS declarations END_PARAMS $@2 . BEGIN_LOCALS declarations END_LOCALS $@3 BEGIN_BODY statements END_BODY

    BEGIN_LOCALS  shift, and go to state 26


State 23

   11 declarations: declaration SEMICOLON declarations .

    $default  reduce using rule 11 (declarations)


State 24

   12 declaration: identifiers COLON INTEGER .

    $default  reduce using rule 12 (declaration)


State 25

   13 declaration: identifiers COLON ARRAY . L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    L_SQUARE_BRACKET  shift, and go to state 27


State 26

    8 function: FUNCTION ident SEMICOLON $@1 BEGIN_PARAMS declarations END_PARAMS $@2 BEGIN_LOCALS . declarations END_LOCALS $@3 BEGIN_BODY statements END_BODY

    IDENT  shift, and go to state 5

    $default  reduce using rule 10 (declarations)

    ident         go to state 13
    declarations  go to state 28
    declaration   go to state 15
    identifiers   go to state 16


State 27

   13 declaration: identifiers COLON ARRAY L_SQUARE_BRACKET . NUMBER R_SQUARE_BRACKET OF INTEGER

    NUMBER  shift, and go to state 29


State 28

    8 function: FUNCTION ident SEMICOLON $@1 BEGIN_PARAMS declarations END_PARAMS $@2 BEGIN_LOCALS declarations . END_LOCALS $@3 BEGIN_BODY statements END_BODY

    END_LOCALS  shift, and go to state 30


State 29

   13 declaration: identifiers COLON ARRAY L_SQUARE_BRACKET NUMBER . R_SQUARE_BRACKET OF INTEGER

    R_SQUARE_BRACKET  shift, and go to state 31


State 30

    8 function: FUNCTION ident SEMICOLON $@1 BEGIN_PARAMS declarations END_PARAMS $@2 BEGIN_LOCALS declarations END_LOCALS . $@3 BEGIN_BODY statements END_BODY

    $default  reduce using rule 7 ($@3)

    $@3  go to state 32


State 31

   13 declaration: identifiers COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET . OF INTEGER

    OF  shift, and go to state 33


State 32

    8 function: FUNCTION ident SEMICOLON $@1 BEGIN_PARAMS declarations END_PARAMS $@2 BEGIN_LOCALS declarations END_LOCALS $@3 . BEGIN_BODY statements END_BODY

    BEGIN_BODY  shift, and go to state 34


State 33

   13 declaration: identifiers COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF . INTEGER

    INTEGER  shift, and go to state 35


State 34

    8 function: FUNCTION ident SEMICOLON $@1 BEGIN_PARAMS declarations END_PARAMS $@2 BEGIN_LOCALS declarations END_LOCALS $@3 BEGIN_BODY . statements END_BODY

    RETURN    shift, and go to state 36
    IF        shift, and go to state 37
    WHILE     shift, and go to state 38
    DO        shift, and go to state 39
    CONTINUE  shift, and go to state 40
    READ      shift, and go to state 41
    WRITE     shift, and go to state 42
    IDENT     shift, and go to state 5

    ident       go to state 43
    statement   go to state 44
    statements  go to state 45


State 35

   13 declaration: identifiers COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER .

    $default  reduce using rule 13 (declaration)


State 36

   25 statement: RETURN . expression

    L_PAREN  shift, and go to state 46
    NUMBER   shift, and go to state 47
    IDENT    shift, and go to state 5

    ident                      go to state 48
    expression                 go to state 49
    multiplicative_expression  go to state 50
    term                       go to state 51
    var                        go to state 52


State 37

   18 statement: IF . bool_exp THEN statements ENDIF
   19          | IF . bool_exp THEN statements ELSE statements ENDIF

    TRUE     shift, and go to state 53
    FALSE    shift, and go to state 54
    NOT      shift, and go to state 55
    L_PAREN  shift, and go to state 56
    NUMBER   shift, and go to state 47
    IDENT    shift, and go to state 5

    ident                      go to state 48
    expression                 go to state 57
    multiplicative_expression  go to state 50
    term                       go to state 51
    bool_exp                   go to state 58
    relation_and_exp           go to state 59
    relation_exp               go to state 60
    var                        go to state 52


State 38

   20 statement: WHILE . bool_exp BEGINLOOP statements ENDLOOP

    TRUE     shift, and go to state 53
    FALSE    shift, and go to state 54
    NOT      shift, and go to state 55
    L_PAREN  shift, and go to state 56
    NUMBER   shift, and go to state 47
    IDENT    shift, and go to state 5

    ident                      go to state 48
    expression                 go to state 57
    multiplicative_expression  go to state 50
    term                       go to state 51
    bool_exp                   go to state 61
    relation_and_exp           go to state 59
    relation_exp               go to state 60
    var                        go to state 52


State 39

   21 statement: DO . BEGINLOOP statements ENDLOOP WHILE bool_exp

    BEGINLOOP  shift, and go to state 62


State 40

   24 statement: CONTINUE .

    $default  reduce using rule 24 (statement)


State 41

   22 statement: READ . ident

    IDENT  shift, and go to state 5

    ident  go to state 63


State 42

   23 statement: WRITE . ident

    IDENT  shift, and go to state 5

    ident  go to state 64


State 43

   16 statement: ident . L_SQUARE_BRACKET expression R_SQUARE_BRACKET ASSIGN expression
   17          | ident . ASSIGN expression

    L_SQUARE_BRACKET  shift, and go to state 65
    ASSIGN            shift, and go to state 66


State 44

   26 statements: statement . SEMICOLON
   27           | statement . SEMICOLON statements

    SEMICOLON  shift, and go to state 67


State 45

    8 function: FUNCTION ident SEMICOLON $@1 BEGIN_PARAMS declarations END_PARAMS $@2 BEGIN_LOCALS declarations END_LOCALS $@3 BEGIN_BODY statements . END_BODY

    END_BODY  shift, and go to state 68


State 46

   37 term: L_PAREN . expression R_PAREN

    L_PAREN  shift, and go to state 46
    NUMBER   shift, and go to state 47
    IDENT    shift, and go to state 5

    ident                      go to state 48
    expression                 go to state 69
    multiplicative_expression  go to state 50
    term                       go to state 51
    var                        go to state 52


State 47

   36 term: NUMBER .

    $default  reduce using rule 36 (term)


State 48

   39 term: ident . $@4 L_PAREN expressions R_PAREN
   62 var: ident .
   63    | ident . L_SQUARE_BRACKET expression R_SQUARE_BRACKET

    L_SQUARE_BRACKET  shift, and go to state 70

    L_PAREN   reduce using rule 38 ($@4)
    $default  reduce using rule 62 (var)

    $@4  go to state 71


State 49

   25 statement: RETURN expression .

    $default  reduce using rule 25 (statement)


State 50

   28 expression: multiplicative_expression .
   29           | multiplicative_expression . ADD expression
   30           | multiplicative_expression . SUB expression

    SUB  shift, and go to state 72
    ADD  shift, and go to state 73

    $default  reduce using rule 28 (expression)


State 51

   31 multiplicative_expression: term .
   32                          | term . MULT multiplicative_expression
   33                          | term . DIV multiplicative_expression
   34                          | term . MOD multiplicative_expression

    MULT  shift, and go to state 74
    DIV   shift, and go to state 75
    MOD   shift, and go to state 76

    $default  reduce using rule 31 (multiplicative_expression)


State 52

   35 term: var .

    $default  reduce using rule 35 (term)


State 53

   50 relation_exp: TRUE .

    $default  reduce using rule 50 (relation_exp)


State 54

   52 relation_exp: FALSE .

    $default  reduce using rule 52 (relation_exp)


State 55

   49 relation_exp: NOT . expression comp expression
   51             | NOT . TRUE
   53             | NOT . FALSE
   55             | NOT . L_PAREN bool_exp R_PAREN

    TRUE     shift, and go to state 77
    FALSE    shift, and go to state 78
    L_PAREN  shift, and go to state 79
    NUMBER   shift, and go to state 47
    IDENT    shift, and go to state 5

    ident                      go to state 48
    expression                 go to state 80
    multiplicative_expression  go to state 50
    term                       go to state 51
    var                        go to state 52


State 56

   37 term: L_PAREN . expression R_PAREN
   54 relation_exp: L_PAREN . bool_exp R_PAREN

    TRUE     shift, and go to state 53
    FALSE    shift, and go to state 54
    NOT      shift, and go to state 55
    L_PAREN  shift, and go to state 56
    NUMBER   shift, and go to state 47
    IDENT    shift, and go to state 5

    ident                      go to state 48
    expression                 go to state 81
    multiplicative_expression  go to state 50
    term                       go to state 51
    bool_exp                   go to state 82
    relation_and_exp           go to state 59
    relation_exp               go to state 60
    var                        go to state 52


State 57

   48 relation_exp: expression . comp expression

    EQ   shift, and go to state 83
    NEQ  shift, and go to state 84
    LT   shift, and go to state 85
    GT   shift, and go to state 86
    LTE  shift, and go to state 87
    GTE  shift, and go to state 88

    comp  go to state 89


State 58

   18 statement: IF bool_exp . THEN statements ENDIF
   19          | IF bool_exp . THEN statements ELSE statements ENDIF

    THEN  shift, and go to state 90


State 59

   44 bool_exp: relation_and_exp .
   45         | relation_and_exp . OR bool_exp

    OR  shift, and go to state 91

    $default  reduce using rule 44 (bool_exp)


State 60

   46 relation_and_exp: relation_exp .
   47                 | relation_exp . AND relation_and_exp

    AND  shift, and go to state 92

    $default  reduce using rule 46 (relation_and_exp)


State 61

   20 statement: WHILE bool_exp . BEGINLOOP statements ENDLOOP

    BEGINLOOP  shift, and go to state 93


State 62

   21 statement: DO BEGINLOOP . statements ENDLOOP WHILE bool_exp

    RETURN    shift, and go to state 36
    IF        shift, and go to state 37
    WHILE     shift, and go to state 38
    DO        shift, and go to state 39
    CONTINUE  shift, and go to state 40
    READ      shift, and go to state 41
    WRITE     shift, and go to state 42
    IDENT     shift, and go to state 5

    ident       go to state 43
    statement   go to state 44
    statements  go to state 94


State 63

   22 statement: READ ident .

    $default  reduce using rule 22 (statement)


State 64

   23 statement: WRITE ident .

    $default  reduce using rule 23 (statement)


State 65

   16 statement: ident L_SQUARE_BRACKET . expression R_SQUARE_BRACKET ASSIGN expression

    L_PAREN  shift, and go to state 46
    NUMBER   shift, and go to state 47
    IDENT    shift, and go to state 5

    ident                      go to state 48
    expression                 go to state 95
    multiplicative_expression  go to state 50
    term                       go to state 51
    var                        go to state 52


State 66

   17 statement: ident ASSIGN . expression

    L_PAREN  shift, and go to state 46
    NUMBER   shift, and go to state 47
    IDENT    shift, and go to state 5

    ident                      go to state 48
    expression                 go to state 96
    multiplicative_expression  go to state 50
    term                       go to state 51
    var                        go to state 52


State 67

   26 statements: statement SEMICOLON .
   27           | statement SEMICOLON . statements

    RETURN    shift, and go to state 36
    IF        shift, and go to state 37
    WHILE     shift, and go to state 38
    DO        shift, and go to state 39
    CONTINUE  shift, and go to state 40
    READ      shift, and go to state 41
    WRITE     shift, and go to state 42
    IDENT     shift, and go to state 5

    $default  reduce using rule 26 (statements)

    ident       go to state 43
    statement   go to state 44
    statements  go to state 97


State 68

    8 function: FUNCTION ident SEMICOLON $@1 BEGIN_PARAMS declarations END_PARAMS $@2 BEGIN_LOCALS declarations END_LOCALS $@3 BEGIN_BODY statements END_BODY .

    $default  reduce using rule 8 (function)


State 69

   37 term: L_PAREN expression . R_PAREN

    R_PAREN  shift, and go to state 98


State 70

   63 var: ident L_SQUARE_BRACKET . expression R_SQUARE_BRACKET

    L_PAREN  shift, and go to state 46
    NUMBER   shift, and go to state 47
    IDENT    shift, and go to state 5

    ident                      go to state 48
    expression                 go to state 99
    multiplicative_expression  go to state 50
    term                       go to state 51
    var                        go to state 52


State 71

   39 term: ident $@4 . L_PAREN expressions R_PAREN

    L_PAREN  shift, and go to state 100


State 72

   30 expression: multiplicative_expression SUB . expression

    L_PAREN  shift, and go to state 46
    NUMBER   shift, and go to state 47
    IDENT    shift, and go to state 5

    ident                      go to state 48
    expression                 go to state 101
    multiplicative_expression  go to state 50
    term                       go to state 51
    var                        go to state 52


State 73

   29 expression: multiplicative_expression ADD . expression

    L_PAREN  shift, and go to state 46
    NUMBER   shift, and go to state 47
    IDENT    shift, and go to state 5

    ident                      go to state 48
    expression                 go to state 102
    multiplicative_expression  go to state 50
    term                       go to state 51
    var                        go to state 52


State 74

   32 multiplicative_expression: term MULT . multiplicative_expression

    L_PAREN  shift, and go to state 46
    NUMBER   shift, and go to state 47
    IDENT    shift, and go to state 5

    ident                      go to state 48
    multiplicative_expression  go to state 103
    term                       go to state 51
    var                        go to state 52


State 75

   33 multiplicative_expression: term DIV . multiplicative_expression

    L_PAREN  shift, and go to state 46
    NUMBER   shift, and go to state 47
    IDENT    shift, and go to state 5

    ident                      go to state 48
    multiplicative_expression  go to state 104
    term                       go to state 51
    var                        go to state 52


State 76

   34 multiplicative_expression: term MOD . multiplicative_expression

    L_PAREN  shift, and go to state 46
    NUMBER   shift, and go to state 47
    IDENT    shift, and go to state 5

    ident                      go to state 48
    multiplicative_expression  go to state 105
    term                       go to state 51
    var                        go to state 52


State 77

   51 relation_exp: NOT TRUE .

    $default  reduce using rule 51 (relation_exp)


State 78

   53 relation_exp: NOT FALSE .

    $default  reduce using rule 53 (relation_exp)


State 79

   37 term: L_PAREN . expression R_PAREN
   55 relation_exp: NOT L_PAREN . bool_exp R_PAREN

    TRUE     shift, and go to state 53
    FALSE    shift, and go to state 54
    NOT      shift, and go to state 55
    L_PAREN  shift, and go to state 56
    NUMBER   shift, and go to state 47
    IDENT    shift, and go to state 5

    ident                      go to state 48
    expression                 go to state 81
    multiplicative_expression  go to state 50
    term                       go to state 51
    bool_exp                   go to state 106
    relation_and_exp           go to state 59
    relation_exp               go to state 60
    var                        go to state 52


State 80

   49 relation_exp: NOT expression . comp expression

    EQ   shift, and go to state 83
    NEQ  shift, and go to state 84
    LT   shift, and go to state 85
    GT   shift, and go to state 86
    LTE  shift, and go to state 87
    GTE  shift, and go to state 88

    comp  go to state 107


State 81

   37 term: L_PAREN expression . R_PAREN
   48 relation_exp: expression . comp expression

    EQ       shift, and go to state 83
    NEQ      shift, and go to state 84
    LT       shift, and go to state 85
    GT       shift, and go to state 86
    LTE      shift, and go to state 87
    GTE      shift, and go to state 88
    R_PAREN  shift, and go to state 98

    comp  go to state 89


State 82

   54 relation_exp: L_PAREN bool_exp . R_PAREN

    R_PAREN  shift, and go to state 108


State 83

   56 comp: EQ .

    $default  reduce using rule 56 (comp)


State 84

   57 comp: NEQ .

    $default  reduce using rule 57 (comp)


State 85

   58 comp: LT .

    $default  reduce using rule 58 (comp)


State 86

   59 comp: GT .

    $default  reduce using rule 59 (comp)


State 87

   60 comp: LTE .

    $default  reduce using rule 60 (comp)


State 88

   61 comp: GTE .

    $default  reduce using rule 61 (comp)


State 89

   48 relation_exp: expression comp . expression

    L_PAREN  shift, and go to state 46
    NUMBER   shift, and go to state 47
    IDENT    shift, and go to state 5

    ident                      go to state 48
    expression                 go to state 109
    multiplicative_expression  go to state 50
    term                       go to state 51
    var                        go to state 52


State 90

   18 statement: IF bool_exp THEN . statements ENDIF
   19          | IF bool_exp THEN . statements ELSE statements ENDIF

    RETURN    shift, and go to state 36
    IF        shift, and go to state 37
    WHILE     shift, and go to state 38
    DO        shift, and go to state 39
    CONTINUE  shift, and go to state 40
    READ      shift, and go to state 41
    WRITE     shift, and go to state 42
    IDENT     shift, and go to state 5

    ident       go to state 43
    statement   go to state 44
    statements  go to state 110


State 91

   45 bool_exp: relation_and_exp OR . bool_exp

    TRUE     shift, and go to state 53
    FALSE    shift, and go to state 54
    NOT      shift, and go to state 55
    L_PAREN  shift, and go to state 56
    NUMBER   shift, and go to state 47
    IDENT    shift, and go to state 5

    ident                      go to state 48
    expression                 go to state 57
    multiplicative_expression  go to state 50
    term                       go to state 51
    bool_exp                   go to state 111
    relation_and_exp           go to state 59
    relation_exp               go to state 60
    var                        go to state 52


State 92

   47 relation_and_exp: relation_exp AND . relation_and_exp

    TRUE     shift, and go to state 53
    FALSE    shift, and go to state 54
    NOT      shift, and go to state 55
    L_PAREN  shift, and go to state 56
    NUMBER   shift, and go to state 47
    IDENT    shift, and go to state 5

    ident                      go to state 48
    expression                 go to state 57
    multiplicative_expression  go to state 50
    term                       go to state 51
    relation_and_exp           go to state 112
    relation_exp               go to state 60
    var                        go to state 52


State 93

   20 statement: WHILE bool_exp BEGINLOOP . statements ENDLOOP

    RETURN    shift, and go to state 36
    IF        shift, and go to state 37
    WHILE     shift, and go to state 38
    DO        shift, and go to state 39
    CONTINUE  shift, and go to state 40
    READ      shift, and go to state 41
    WRITE     shift, and go to state 42
    IDENT     shift, and go to state 5

    ident       go to state 43
    statement   go to state 44
    statements  go to state 113


State 94

   21 statement: DO BEGINLOOP statements . ENDLOOP WHILE bool_exp

    ENDLOOP  shift, and go to state 114


State 95

   16 statement: ident L_SQUARE_BRACKET expression . R_SQUARE_BRACKET ASSIGN expression

    R_SQUARE_BRACKET  shift, and go to state 115


State 96

   17 statement: ident ASSIGN expression .

    $default  reduce using rule 17 (statement)


State 97

   27 statements: statement SEMICOLON statements .

    $default  reduce using rule 27 (statements)


State 98

   37 term: L_PAREN expression R_PAREN .

    $default  reduce using rule 37 (term)


State 99

   63 var: ident L_SQUARE_BRACKET expression . R_SQUARE_BRACKET

    R_SQUARE_BRACKET  shift, and go to state 116


State 100

   39 term: ident $@4 L_PAREN . expressions R_PAREN

    L_PAREN  shift, and go to state 46
    NUMBER   shift, and go to state 47
    IDENT    shift, and go to state 5

    $default  reduce using rule 40 (expressions)

    ident                      go to state 48
    expression                 go to state 117
    multiplicative_expression  go to state 50
    term                       go to state 51
    expressions                go to state 118
    comma_sep_expressions      go to state 119
    var                        go to state 52


State 101

   30 expression: multiplicative_expression SUB expression .

    $default  reduce using rule 30 (expression)


State 102

   29 expression: multiplicative_expression ADD expression .

    $default  reduce using rule 29 (expression)


State 103

   32 multiplicative_expression: term MULT multiplicative_expression .

    $default  reduce using rule 32 (multiplicative_expression)


State 104

   33 multiplicative_expression: term DIV multiplicative_expression .

    $default  reduce using rule 33 (multiplicative_expression)


State 105

   34 multiplicative_expression: term MOD multiplicative_expression .

    $default  reduce using rule 34 (multiplicative_expression)


State 106

   55 relation_exp: NOT L_PAREN bool_exp . R_PAREN

    R_PAREN  shift, and go to state 120


State 107

   49 relation_exp: NOT expression comp . expression

    L_PAREN  shift, and go to state 46
    NUMBER   shift, and go to state 47
    IDENT    shift, and go to state 5

    ident                      go to state 48
    expression                 go to state 121
    multiplicative_expression  go to state 50
    term                       go to state 51
    var                        go to state 52


State 108

   54 relation_exp: L_PAREN bool_exp R_PAREN .

    $default  reduce using rule 54 (relation_exp)


State 109

   48 relation_exp: expression comp expression .

    $default  reduce using rule 48 (relation_exp)


State 110

   18 statement: IF bool_exp THEN statements . ENDIF
   19          | IF bool_exp THEN statements . ELSE statements ENDIF

    ENDIF  shift, and go to state 122
    ELSE   shift, and go to state 123


State 111

   45 bool_exp: relation_and_exp OR bool_exp .

    $default  reduce using rule 45 (bool_exp)


State 112

   47 relation_and_exp: relation_exp AND relation_and_exp .

    $default  reduce using rule 47 (relation_and_exp)


State 113

   20 statement: WHILE bool_exp BEGINLOOP statements . ENDLOOP

    ENDLOOP  shift, and go to state 124


State 114

   21 statement: DO BEGINLOOP statements ENDLOOP . WHILE bool_exp

    WHILE  shift, and go to state 125


State 115

   16 statement: ident L_SQUARE_BRACKET expression R_SQUARE_BRACKET . ASSIGN expression

    ASSIGN  shift, and go to state 126


State 116

   63 var: ident L_SQUARE_BRACKET expression R_SQUARE_BRACKET .

    $default  reduce using rule 63 (var)


State 117

   42 comma_sep_expressions: expression .
   43                      | expression . COMMA comma_sep_expressions

    COMMA  shift, and go to state 127

    $default  reduce using rule 42 (comma_sep_expressions)


State 118

   39 term: ident $@4 L_PAREN expressions . R_PAREN

    R_PAREN  shift, and go to state 128


State 119

   41 expressions: comma_sep_expressions .

    $default  reduce using rule 41 (expressions)


State 120

   55 relation_exp: NOT L_PAREN bool_exp R_PAREN .

    $default  reduce using rule 55 (relation_exp)


State 121

   49 relation_exp: NOT expression comp expression .

    $default  reduce using rule 49 (relation_exp)


State 122

   18 statement: IF bool_exp THEN statements ENDIF .

    $default  reduce using rule 18 (statement)


State 123

   19 statement: IF bool_exp THEN statements ELSE . statements ENDIF

    RETURN    shift, and go to state 36
    IF        shift, and go to state 37
    WHILE     shift, and go to state 38
    DO        shift, and go to state 39
    CONTINUE  shift, and go to state 40
    READ      shift, and go to state 41
    WRITE     shift, and go to state 42
    IDENT     shift, and go to state 5

    ident       go to state 43
    statement   go to state 44
    statements  go to state 129


State 124

   20 statement: WHILE bool_exp BEGINLOOP statements ENDLOOP .

    $default  reduce using rule 20 (statement)


State 125

   21 statement: DO BEGINLOOP statements ENDLOOP WHILE . bool_exp

    TRUE     shift, and go to state 53
    FALSE    shift, and go to state 54
    NOT      shift, and go to state 55
    L_PAREN  shift, and go to state 56
    NUMBER   shift, and go to state 47
    IDENT    shift, and go to state 5

    ident                      go to state 48
    expression                 go to state 57
    multiplicative_expression  go to state 50
    term                       go to state 51
    bool_exp                   go to state 130
    relation_and_exp           go to state 59
    relation_exp               go to state 60
    var                        go to state 52


State 126

   16 statement: ident L_SQUARE_BRACKET expression R_SQUARE_BRACKET ASSIGN . expression

    L_PAREN  shift, and go to state 46
    NUMBER   shift, and go to state 47
    IDENT    shift, and go to state 5
